2005-11-20 Scott Dattalo  <scott@dattalo.com>
	* lcd.cc: updated to new gpsim stimulus API.

2005-08-30 Scott Dattalo  <scott@dattalo.com>
	* configure.in: changed version to 0.2.5

2005-08-30 Scott Dattalo  <scott@dattalo.com>
	* lcd.cc: updated to new gpsim iopin API.

2005-04-29 Scott Dattalo  <scott@dattalo.com>
	* configure.in: Changed the revision to 0.2.4

2004-11-24 Scott Dattalo  <scott@dattalo.com>
	* lcd.cc: Fixed LCD ports so that they conform to recent gpsim
	changes.

2004-09-28 Scott Dattalo  <scott@dattalo.com>
	* configure.in: Added support for gtk-2.x. Changed the LCD version
	to 0.2.3
	
2004-09-13 Scott Dattalo  <scott@dattalo.com>
	* lcd.h: TriggerObjects used to be called BreakpointObjects in
	gpsim.
	
2004-09-05 Robert Pearce
	* lcd.cc, lcd.h, lcdengine.cc, lcdgui.cc: I/O pins and stimuli.
	(patch applied by Scott).

2004-09-01 Scott Dattalo  <scott@dattalo.com>
	* lcd.cc, lcd.h: updated the LCD module with the current gpsim trace
	implementation.
	* examples/lcd_mod.stc: The node name 'DC' conflicts with the status
	flag DC bit name. (They're both symbols).

2004-07-23 Scott Dattalo  <scott@dattalo.com>
	* lcd.cc, lcd.h, lcdengine.cc: updated the LCD I/O pins to the
	current gpsim implementation.

2004-05-12  Bert Driehuis <driehuis@playbeing.org>
	* lcd.cc: CGRAM initial value should be 0xff and not 0.

2004-06-14 Scott Dattalo  <scott@dattalo.com>
	* INSTALL: Updated CVS instructions.
	
2004-05-12  Bert Driehuis <driehuis@playbeing.org>
	* lcd.cc, lcd.h, lcdengine.cc: support CGRAM
	
2004-04-13  Scott Dattalo  <scott@dattalo.com>
	* lcd.h: updated to latest simulator interface changes (The BreakCallBack
	class has been renamed).
	
2004-03-30  Scott Dattalo  <scott@dattalo.com>
	* lcd.cc: updated to latest simulator interface changes (where 
	char *'s were changed to strings)
	
2004-03-08  Scott Dattalo  <scott@dattalo.com>
	* lcd.h, lcd.cc, lcdengine.cc, examples/lcd.asm:
	Fixed the busy bit logic.
	