@@ -1,3 +1,6 @@
+2005-12-06 Scott Dattalo  <scott@dattalo.com>
+	* lcd.cc: updated to new gpsim iopin API
+
 2005-11-20 Scott Dattalo  <scott@dattalo.com>
 	* lcd.cc: updated to new gpsim stimulus API.
 
